k8s/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: static-websites
  name: communitystack-website
  labels:
    app: communitystack-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: communitystack-website
  template:
    metadata:
      labels:
        app: communitystack-website
    spec:
      containers:
      - name: communitystack-website
        image: "ghcr.io/communitystack/www.communitystack.com:latest"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: static-websites
  name: communitystack-website
  labels:
    app: communitystack-website
spec:
  type: ClusterIP
  selector:
    app: communitystack-website
  ports:
    - protocol: TCP
      name: http
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: static-websites
  name: communitystack-website
  labels:
    app: communitystack-website
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.communitystack.com
    - communitystack.com
    secretName: communitystack-website-tls
  rules:
  - host: www.communitystack.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: communitystack-website
            port:
              number: 80
  - host: communitystack.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: communitystack-website
            port:
              number: 80
